@@ -3,6 +3,7 @@
 - Fix: [#14312] Research ride type message incorrect.
 - Fix: [#18122] Ghosts count towards “Great scenery!” guest thought.
 - Fix: [#18134] Underground on-ride photo section partially clips through adjacent terrain edge.
+- Improved: [#18192, #18214] Tycoon Park has been added Extras tab, Competition scenarios have received their own section.
 
 0.4.2 (2022-10-05)
 ------------------------------------------------------------------------
